name:                falsum
version:             0.1.0.0
synopsis:            The compiler of a subset of Rust to LLVM
description:         Please see README.md
homepage:            https://github.com/vanam/rust2llvm#readme
license:             BSD3
--license-file:        LICENSE
author:              Jiří Láska, Václav Löffelmann, Martin Váňa
-- maintainer:          example@example.com
-- copyright:           2016 Author name here
-- category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Falsum.Lexer
                     , Falsum.Parser
                     , Falsum.TokenTest
                     , Falsum.AST
                     , Falsum.Codegen
                     , Falsum.Transform
                     , ChangeState
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1.11
                     , llvm-general         >= 3.5.0.0
                     , llvm-general-pure    >= 3.5.0
                     , transformers
                     , random
  default-language:    Haskell2010

executable falsum
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , falsum
                     , directory
  default-language:    Haskell2010

test-suite falsum-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , falsum
                     , tasty >= 0.10
                     , tasty-quickcheck
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vanam/rust2llvm
